hpa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - course-tracker.com
    - secretName: my-secret
  ingressClassName: nginx
  rules:
    - host: course-tracker.com
      http:
        paths:
          - backend:
              service:
                name: course-tracker-dep
                port:
                  number: 8080
            path: /
            pathType: Prefix
